2013-04-11  Sergio Martin <sergio.martin@artica.es>

	* operation/visual_console/render_view.php
	operation/reporting/reporting_viewer.php
	operation/reporting/graph_viewer.php
	godmode/reporting/visual_console_builder.php
	godmode/reporting/graph_builder.php
	godmode/reporting/reporting_builder.php: Redistribute
	the options of some sections to improve the usability

	* images/cross_undo.png
	images/load.png: Change some images

	* operation/agentes/stat_win.php: Fix the problem of 
	the height of module graphs form layer adding a scroll
	div

2013-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	include/functions_events.php
	include/graphs/functions_flot.php
	operation/events/events_list.php
	operation/agentes/tactical.php
	images/cross_undo.png
	images/header_user.png
	images/pandora_header_logo_enterprise.png
	images/note.png
	images/header_chat.png
	images/enterprise_icon.png
	images/header_warning.png
	images/header_ready.png
	images/header_blackout.png
	images/header_refresh.png
	images/header_logout.png
	images/eye.png
	images/header_email.png
	images/pandora_header_logo.png
	images/header_down.png
	images/header_user_admin.png
	images/header_help.png
	images/bin.png
	general/header.php: Change the header to tiny 
	version and clean/change more icons

	* operation/agentes/datos_agente.php: Restore
	accidentaly deleted file

2013-04-10 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	autosave and non-autosave actions.
	
	Fixes: #3609806
	
	* godmode/reporting/visual_console_builder.editor.php: re-added
	the translations to strings for the error messages for user across
	the javascript.

2013-04-10 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map_editor.php: fixed the lost field
	for the label in the items.

2013-04-10 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map_editor.php,