@@ -245,7 +245,7 @@ if ($delete_group) {
 	}
 }
 db_clean_cache();
-$groups = users_get_groups_tree ($config['id_user'], "AR", true); 
+$groups = users_get_groups_tree ($config['id_user'], "AR", true);
 $table->width = '98%';
 
 if (!empty($groups)) {
